--- a/src/Dockin.csproj
+++ b/src/Dockin.csproj
@@ -10,6 +10,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.8" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="9.0.8" />
 		<PackageReference Include="OpenIddict.AspNetCore" Version="7.0.0" />
 		<PackageReference Include="Yarp.ReverseProxy" Version="2.3.0" />
