--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -23,6 +23,10 @@
           "destination1": {
             "Address": "https://example.com/"
           }
+        },
+        "HttpRequest": {
+          "Version": "1.1",
+          "VersionPolicy": "RequestVersionExact"
         }
       }
     }
