--- a/src/Dockin.csproj
+++ b/src/Dockin.csproj
@@ -1,18 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
-		<TargetFramework>net9.0</TargetFramework>
+		<TargetFramework>net10.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
+		
+		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
 		<InvariantGlobalization>true</InvariantGlobalization>
 		<PublishAot>true</PublishAot>
-		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+
+		<Http3Support>false</Http3Support>
+		<DisabledFeatureSwitches>System.Net.SocketsHttpHandler.Http3Support</DisabledFeatureSwitches>
+		<UseSizeOptimizedLinq>false</UseSizeOptimizedLinq>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.*" />
-		<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="9.0.*" />
-		<PackageReference Include="OpenIddict.AspNetCore" Version="7.0.*" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.*" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="10.0.*" />
+		<PackageReference Include="OpenIddict.AspNetCore" Version="7.*" />
 		<PackageReference Include="Yarp.ReverseProxy" Version="2.3.*" />
 		
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.*" />
